@@ -207,8 +207,7 @@ int main(int argc,char **argv)
       MagickFatalError(ResourceLimitFatalError,"Unable to persist key",argv[i]);
     (void) FormatString(image_info->filename,"msl:%.1024s",argv[i]);
     image=ReadImage(image_info,&exception);
-    if (exception.severity != UndefinedException)
-      MagickError(exception.severity,exception.reason,exception.description);
+    CatchException(&exception);
     status&=image != (Image *) NULL;
     if (image != (Image *) NULL)
       DestroyImageList(image);
