@@ -390,9 +390,7 @@ static unsigned int ConvertUtility(int argc,char **argv)
           next_image=PingImage(image_info,&exception);
         else
           next_image=ReadImage(image_info,&exception);
-        if (exception.severity != UndefinedException)
-          MagickError(exception.severity,exception.reason,
-            exception.description);
+        CatchException(&exception);
         status&=next_image != (Image *) NULL;
         if (next_image == (Image *) NULL)
           continue;
@@ -1202,9 +1200,7 @@ static unsigned int ConvertUtility(int argc,char **argv)
                     MagickFatalError(OptionFatalError,"Invalid list type",
                       option);
                 }
-                if (exception.severity != UndefinedException)
-                  MagickFatalError(exception.severity,exception.reason,
-                    exception.description);
+                CatchException(&exception);
                 DestroyMagick();
                 Exit(0);
               }
