@@ -424,9 +424,7 @@ int main(int argc,char **argv)
           image_info->colorspace=quantize_info->colorspace;
           image_info->dither=quantize_info->dither;
           image=ReadImage(image_info,&exception);
-          if (exception.severity != UndefinedException)
-            MagickError(exception.severity,exception.reason,
-              exception.description);
+          CatchException(&exception);
           status&=image != (Image *) NULL;
           if (image == (Image *) NULL)
             continue;
