@@ -292,9 +292,7 @@ static unsigned int MontageUtility(int argc,char **argv)
           if (image_info->size == (char *) NULL)
             (void) CloneString(&image_info->size,montage_info->geometry);
           next_image=ReadImage(image_info,&exception);
-          if (exception.severity != UndefinedException)
-            MagickError(exception.severity,exception.reason,
-              exception.description);
+          CatchException(&exception);
           status&=next_image != (Image *) NULL;
           if (next_image == (Image *) NULL)
             continue;
