@@ -25,6 +25,7 @@ ImageMagick Changes</font></font></font></b></td>
 <pre>
 2002-06-09  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
 	* Label color could not be set (bug report by Ron Savage).
+	* Warnings were being reported as error exceptions in PerlMagick.
 
 2002-06-06  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
 	* ImageMagick, version 5.4.6-1 released.
